--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ header{
     grid-area: pillar3;
     margin-left: 9px;
 }
+
+h2{
+    float: left;
+    width: 300px;
+    margin: 0;
+    margin-top: 29px;
+   
+    
+}
