--- a/style.css
+++ b/style.css
@@ -36,7 +36,14 @@ header{
     grid-area: pillar3;
     margin-left: 9px;
 }
-
+.nav{
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 0;
+    margin-top: 33.5px;
+    text-align: center;
+}
 h2{
     float: left;
     width: 300px;
