--- a/style.css
+++ b/style.css
@@ -49,6 +49,9 @@ h2{
     width: 300px;
     margin: 0;
     margin-top: 29px;
-   
-    
+}
+li{
+    padding: 0;
+    margin: 0;
+    border: none;
 }
