--- a/style.css
+++ b/style.css
@@ -40,22 +40,24 @@ header{
     margin-top: 33.5px;
     text-align: center;
 }
-h2{
+.name{
     float: left;
     width: 300px;
     margin: 0;
-    margin-top: 29px;
+    margin-top: 33.5px;
 }
 li{
     padding: 0;
     margin: 0;
     border: none;
 }
-.card1, h1, h2{
-    justify-content: left;
-}
 .mainimg{
-    justify-content: right;
     width: 551px;
     height: 437px;
+    text-align: right;
+}
+.introtext{
+    text-align: center;
+    width: 390px;
+    margin-left: 50px;
 }
