--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ li{
     text-align: center;
     width: 300px;
     margin-top: 68.5px;
+    margin-left: 110px;
     float: left;
 }
 .introtext, h1{
