--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(91.8%, 88.6%, 71.8%);
-    opacity: 83%;
+    margin: 0;
+    padding: 0;
     display: grid;
     grid-template-rows: autos;
     grid-template-columns: 8.5% 26.6% 1.5% 26.6% 1.5% 26.6% 8.5%;
@@ -14,7 +15,7 @@ header{
     grid-area: header;
     height: 85px;
     margin-bottom: 50px;
-    
+
 }
 .card1{
     background-color: white;
@@ -38,27 +39,32 @@ header{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 0;
-    margin-top: 33.5px;
+    margin-top: 26px;
     text-align: center;
+    margin-right: 0;
 }
 .name{
     float: left;
-    width: 300px;
+    width: 350px;
     margin: 0;
-    margin-top: 33.5px;
+    margin-top: 18px;
     font-family: 'Prata', serif;
-    font-style: normal;
+    font-size: 36px;
+    margin-left: 50px;
 }
 li{
     padding: 0;
     margin: 0;
     border: none;
+    font-family: 'Prata', serif;
+    font-size: 24px;
 }
 .mainimg{
     width: 551px;
     height: 437px;
     text-align: center;
     float: right;
+    margin: 0;
 }
 .introtext{
     text-align: center;
