--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+   text-decoration: none; 
+}
 body{
     background-color: rgb(91.8%, 88.6%, 71.8%);
     margin: 0;
@@ -15,12 +18,13 @@ header{
     grid-area: header;
     height: 85px;
     margin-bottom: 50px;
-
+    color: #ffffff;
 }
 .card1{
     background-color: white;
     grid-area: title;
     margin-bottom: 50px;
+    color: rgb(0, 48, 73);
 }
 .pillar1{
     background-color: white;
@@ -58,6 +62,9 @@ li{
     border: none;
     font-family: 'Prata', serif;
     font-size: 24px;
+    text-decoration: none;
+    color: #ffffff;
+    
 }
 .mainimg{
     width: 551px;
