--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ li{
     font-family: 'Prata', serif;
     font-size: 24px;
     text-decoration: none;
-    color: #ffffff;
+    
     
 }
 .mainimg{
@@ -87,4 +87,7 @@ li{
 }
 .introtext, h2{
     font-size: 24px;
+}
+li, a:link{
+    color: #ffffff;
 }
