--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
 
 }
 body{
-    background-color: rgb(91.8%, 88.6%, 71.8%);
+    background-color: rgba(194,188,152,255);
     margin: 0;
-    padding: 0;
     display: grid;
     grid-template-rows: autos;
     grid-template-columns: 9.4% 26% 1.5% 26% 1.5% 26% 9.4%;
@@ -15,17 +14,19 @@ body{
     
 }
 header{
-    background: linear-gradient(to bottom, orange 96%, red 4%);
+    background: linear-gradient(to bottom, rgba(247,127,0,255) 96%, rgba(214,40,40,255) 4%);
     grid-area: header;
     height: 90px;
     margin-bottom: 50px;
     color: #ffffff;
-    box-shadow: 1px 1px 10px black;
-    width: auto;
+    box-shadow: 1px 1px 10px -5px black;
+    max-width: 1563px;
+    width: 1349px;
     position: -webkit-sticky;
 	position: sticky;
 	top: 0;
 }
+
 .card1{
     background-color: white;
     grid-area: title;
