--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ li{
     font-size: 24px;
     text-decoration: none;
     margin-right: 0;
-    
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.425);
 }
 .mainimg{
     width: 551px;
@@ -108,4 +108,5 @@ li{
 }
 li, a:link{
     color: #ffffff;
+    
 }
