--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 *{
    text-decoration: none; 
-
 }
 body{
     background-color: rgba(194,188,152,255);
@@ -11,7 +10,6 @@ body{
     grid-template-areas: "header header header header header header header"
                             ". title title title title title ."
                             ". pillar1 . pillar2 . pillar3 .";
-    
 }
 header{
     background: linear-gradient(to bottom, rgba(247,127,0,255) 95.5%, rgba(214,40,40,255) 4.5%);
@@ -26,7 +24,11 @@ header{
 	position: sticky;
 	top: 0;
 }
-
+.header, img{
+    height: 85.95px;
+    width: 100.95px;
+    float: left;
+}
 .card1{
     background-color: white;
     grid-area: title;
@@ -56,11 +58,12 @@ header{
     list-style-type: none;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 0;
+    column-gap: 0px;
     margin: 0;
+    margin-right: 0;
     margin-top: 26px;
     text-align: center;
-    
+    width: 600px;
 }
 .name{
     float: left;
@@ -69,19 +72,18 @@ header{
     margin-top: 18px;
     font-family: 'Prata', serif;
     font-size: 36px;
-    margin-left: 50px;
+    margin-left: 17px;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
 }
 li{
     padding: 0;
     margin: 0;
+    width: 150px;
     border: none;
     font-family: 'Prata', serif;
     font-size: 24px;
     text-decoration: none;
     margin-right: 0;
-    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
-}
-header, p{
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
 }
 .mainimg{
@@ -111,5 +113,4 @@ header, p{
 }
 li, a:link{
     color: #ffffff;
-    
 }
