--- a/style.css
+++ b/style.css
@@ -60,10 +60,12 @@ header{
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 0px;
     margin: 0;
-    margin-right: 0;
     margin-top: 26px;
     text-align: center;
-    width: 600px;
+    justify-content: right;
+    width: 520px;
+    float: right;
+    margin-right: 10px;
 }
 .name{
     float: left;
@@ -78,12 +80,11 @@ header{
 li{
     padding: 0;
     margin: 0;
-    width: 150px;
+    width: 130px;
     border: none;
     font-family: 'Prata', serif;
     font-size: 24px;
     text-decoration: none;
-    margin-right: 0;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
 }
 .mainimg{
