--- a/style.css
+++ b/style.css
@@ -41,18 +41,51 @@ header{
     grid-area: pillar1;
     box-shadow: 0px 4px 9px -4px black;
     margin-bottom: 50px;
+    text-align: center;
+    color: rgb(0, 48, 73);
+}
+.pillar1, h3{
+    font-family: 'Prata', serif;
+    font-size: 20px;
+}
+.pillar1, p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
 }
 .pillar2{
     background-color: white;
     grid-area: pillar2;
     box-shadow: 0px 4px 9px -4px black;
     margin-bottom: 50px;
+    text-align: center;
+    color: rgb(0, 48, 73);
+}
+.pillar2, h3{
+    font-family: 'Prata', serif;
+    font-size: 20px;
+}
+.pillar2, p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
 }
 .pillar3{
     background-color: white;
     grid-area: pillar3;
     box-shadow: 0px 4px 9px -4px black;
     margin-bottom: 50px;
+    text-align: center;
+    color: rgb(0, 48, 73);
+}
+.pillar3, h3{
+    font-family: 'Prata', serif;
+    font-size: 20px;
+}
+.pillar3, p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
 }
 .nav{
     list-style-type: none;
