--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ header{
     height: 50%;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 .pillar1, h3{
     font-family: 'Prata', serif;
@@ -58,6 +60,7 @@ header{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
+    
 }
 .pillar2{
     background-color: white;
@@ -72,6 +75,8 @@ header{
     height: 50%;
     margin-left: 7.5%;
     margin-right: 7.5%;
+    margin-top: 15%;
+    margin-bottom: 5%;
 }
 .pillar2, h3{
     font-family: 'Prata', serif;
@@ -81,6 +86,7 @@ header{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
+    
 }
 .pillar3{
     background-color: white;
@@ -95,6 +101,8 @@ header{
     height: 50%;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 .pillar3, h3{
     font-family: 'Prata', serif;
@@ -104,6 +112,7 @@ header{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
+    
 }
 .nav{
     list-style-type: none;
