--- a/style.css
+++ b/style.css
@@ -50,17 +50,19 @@ header{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .pillar1, h3{
     font-family: 'Prata', serif;
     font-size: 20px;
+    padding: 0;
 }
 .pillar1, p{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
-    
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .pillar2{
     background-color: white;
@@ -71,22 +73,25 @@ header{
     color: rgb(0, 48, 73);
 }
 .pillar2img{
-    width: 85%;
-    height: 50%;
-    margin-left: 7.5%;
-    margin-right: 7.5%;
-    margin-top: 15%;
-    margin-bottom: 5%;
+    width: 95%;
+    height: 56%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 0;
+    margin-bottom: 2.5%;
 }
 .pillar2, h3{
     font-family: 'Prata', serif;
     font-size: 20px;
+    padding: 0;
+    margin-top: 0;
 }
 .pillar2, p{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
-    
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .pillar3{
     background-color: white;
@@ -102,17 +107,19 @@ header{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 10%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .pillar3, h3{
     font-family: 'Prata', serif;
     font-size: 20px;
+    padding: 0;
 }
 .pillar3, p{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: bolder;
-    
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .nav{
     list-style-type: none;
@@ -137,6 +144,7 @@ header{
     margin-left: 17px;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
     font-weight: normal;
+    padding: 0;
 }
 li{
     padding: 0;
