--- a/style.css
+++ b/style.css
@@ -76,12 +76,10 @@ header{
     color: rgb(0, 48, 73);
 }
 .pillar2img{
-    width: 80%;
     height: 50%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 10%;
-    margin-bottom: 5%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 .pillar2, h3{
     font-family: 'Prata', serif;
@@ -117,6 +115,7 @@ header{
     font-family: 'Prata', serif;
     font-size: 20px;
     padding: 0;
+    
 }
 .pillar3, p{
     font-family: 'Lato', sans-serif;
