--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ header{
     margin-bottom: 50px;
     text-align: center;
     color: rgb(0, 48, 73);
-    
 }
 .pillar1img{
     width: 80%;
@@ -52,7 +51,6 @@ header{
     margin-right: 10%;
     margin-top: 10%;
     margin-bottom: 5%;
-    
 }
 .pillar1, h3{
     font-family: 'Prata', serif;
@@ -65,7 +63,6 @@ header{
     font-weight: bolder;
     padding-left: 10px;
     padding-right: 10px;
-    
 }
 .pillar2{
     background-color: white;
@@ -76,10 +73,13 @@ header{
     color: rgb(0, 48, 73);
 }
 .pillar2img{
-    height: 50%;
-    width: 100%;
+    height: 39.5%;
+    width: 85%;
     margin: 0;
     padding: 0;
+    margin-right: 7.5%;
+    margin-left: 7.5%;
+    margin-top: 20%;
 }
 .pillar2, h3{
     font-family: 'Prata', serif;
