--- a/style.css
+++ b/style.css
@@ -193,6 +193,21 @@ li{
     font-weight: lighter;
     margin-top: 35px;
 }
+.contentcard{
+    text-align: center;
+    padding-top: 55px;
+    padding-bottom: 55px;
+}
+.contentcard, h3 {
+    font-family: 'Prata', serif;
+    font-size: 20px;
+    color: rgb(0, 48, 73);
+}
+.contentcard, p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    color: rgb(0, 48, 73);
+}
 li, a:link{
     color: #ffffff;
 }
