--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     grid-template-areas: "header header header header header header header"
                             ". title title title title title ."
                             ". text text text text text ."
+                            ". classcard1 classcard1 classcard1 classcard1 classcard1 . "
                             ". pillar1 . pillar2 . pillar3 .";
 }
 header{
@@ -212,6 +213,42 @@ li, a{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     color: rgb(0, 48, 73);
+}
+.classcard{
+    text-align: center;
+    padding-top: 95px;
+    padding-bottom: 80px;
+    display: grid;
+    grid-template-rows: 10% 80% 10%;
+    grid-template-columns: auto;
+    grid-template-areas: "left text right";
+}
+.classcard, h3 {
+    font-family: 'Prata', serif;
+    font-size: 18px;
+    color: rgb(0, 48, 73);
+    grid-area: text;
+}
+.classcard, p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    color: rgb(0, 48, 73);
+    grid-area: text;
+}
+.left{
+    text-align: left;
+    grid-area: left;
+}
+.right{
+    text-align: right;
+    grid-area: right;
+}
+.classcard1{
+    background-color: white;
+    grid-area: classcard1;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
 }
 li, a:link{
     color: #ffffff;
