--- a/style.css
+++ b/style.css
@@ -219,8 +219,8 @@ li, a{
     padding-top: 95px;
     padding-bottom: 80px;
     display: grid;
-    grid-template-rows: 10% 80% 10%;
-    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-columns: 15% 70% 15%;
     grid-template-areas: "left text right";
 }
 .classcard, h3 {
@@ -234,13 +234,14 @@ li, a{
     font-size: 18px;
     color: rgb(0, 48, 73);
     grid-area: text;
+    text-align: center;
 }
 .left{
-    text-align: left;
+    text-align: right;
     grid-area: left;
 }
 .right{
-    text-align: right;
+    text-align: left;
     grid-area: right;
 }
 .classcard1{
@@ -249,6 +250,7 @@ li, a{
     margin-bottom: 50px;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
 }
 li, a:link{
     color: #ffffff;
