--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 *{
    text-decoration: none; 
 }
+html{
+    width: 100%;
+    height: 100%;
+}
 body{
+    min-width: 100%;
+    min-height: 100%;
     background-color: rgba(194,188,152,255);
+    background-size: cover;
+    width: fit-content;
     color: #ffffff;
     margin: 0;
     display: grid;
@@ -16,6 +24,7 @@ body{
 }
 header{
     background: linear-gradient(to bottom, rgba(247,127,0,255) 95.5%, rgba(214,40,40,255) 4.5%);
+    min-width: 100%;
     grid-area: header;
     height: 90px;
     margin-bottom: 50px;
@@ -183,7 +192,7 @@ li, a{
 }
 .introtext{
     text-align: center;
-    width: 300px;
+    
     margin-top:45.8905px;
     margin-left: 110px;
     float: left;
@@ -220,7 +229,7 @@ li, a{
     padding-bottom: 80px;
     display: grid;
     grid-template-rows: auto;
-    grid-template-columns: 15% 70% 15%;
+    grid-template-columns: 20% 60% 20%;
     grid-template-areas: "left text right";
 }
 .classcard, h3 {
@@ -239,10 +248,12 @@ li, a{
 .left{
     text-align: right;
     grid-area: left;
+    margin-right: 133.306px;
 }
 .right{
     text-align: left;
     grid-area: right;
+    margin-left: 133.306px;
 }
 .classcard1{
     background-color: white;
