--- a/style.css
+++ b/style.css
@@ -269,6 +269,42 @@ li, a{
     text-align: center;
     display: none;
 }
+.classcard3{
+    background-color: white;
+    grid-area: classcard1;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
+    display: none;
+}
+.classcard4{
+    background-color: white;
+    grid-area: classcard1;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
+    display: none;
+}
+.classcard5{
+    background-color: white;
+    grid-area: classcard1;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
+    display: none;
+}
+.classcard6{
+    background-color: white;
+    grid-area: classcard1;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
+    display: none;
+}
 li, a:link{
     color: #ffffff;
 }
