--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body{
                             ". title title title title title ."
                             ". text text text text text ."
                             ". classcard1 classcard1 classcard1 classcard1 classcard1 . "
-                            ". pillar1 . pillar2 . pillar3 .";
+                            ". pillar1 . pillar2 . pillar3 ."
+                            ". questions questions . instagram instagram . ";
 }
 header{
     background: linear-gradient(to bottom, rgba(247,127,0,255) 95.5%, rgba(214,40,40,255) 4.5%);
@@ -304,6 +305,22 @@ li, a{
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
     display: none;
+}
+.questioncard{
+    background-color: white;
+    grid-area: questions;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
+}
+.instacard{
+    background-color: white;
+    grid-area: instagram;
+    margin-bottom: 50px;
+    color: rgb(0, 48, 73);
+    box-shadow: 0px 4px 9px -4px black;
+    text-align: center;
 }
 li, a:link{
     color: #ffffff;
