--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ body{
     margin: 0;
     display: grid;
     grid-template-rows: autos;
-    grid-template-columns:  1fr 3fr 0.16fr 3fr 0.16fr 3fr 1fr;
-    grid-template-areas: "header header header header header header header"
-                            ". title title title title title ."
-                            ". text text text text text ."
-                            ". classcard1 classcard1 classcard1 classcard1 classcard1 . "
-                            ". pillar1 . pillar2 . pillar3 ."
-                            ". questions questions . instagram instagram . ";
+    grid-template-columns:  1fr 3fr 0.16fr 1fr 0.33fr 0.6fr 0.33fr 1fr 0.16fr 3fr 1fr;
+    grid-template-areas: "header header header header header header header header header header header"
+                            ". title title title title title title title title title ."
+                            ". text text text text text text text text text ."
+                            ". classcard1 classcard1 classcard1 classcard1 classcard1 classcard1 classcard1 classcard1 classcard1 . "
+                            ". pillar1 . pillar2 pillar2 pillar2 pillar2 pillar2 . pillar3 ."
+                            ". questions questions questions questions . instagram instagram instagram instagram . ";
 }
 header{
     background: linear-gradient(to bottom, rgba(247,127,0,255) 95.5%, rgba(214,40,40,255) 4.5%);
