--- a/style.css
+++ b/style.css
@@ -314,6 +314,12 @@ li, a{
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
 }
+.questionimg{
+    width: 78%;
+    height: 70%;
+    margin-left: 11%;
+    margin-bottom: 40px;
+}
 .instacard{
     background-color: white;
     grid-area: instagram;
@@ -321,6 +327,12 @@ li, a{
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
+}
+.instagramimg{
+    width: 78%;
+    height: 70%;
+    margin-left: 11%;
+    margin-bottom: 40px;
 }
 li, a:link{
     color: #ffffff;
