--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ li, a{
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
+    padding-top: 0;
 }
 .questionimg{
     width: 78%;
@@ -327,12 +328,25 @@ li, a{
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
+    padding-top: 0;
 }
 .instagramimg{
     width: 78%;
     height: 70%;
     margin-left: 11%;
     margin-bottom: 40px;
+}
+button{
+    color: white;
+    background-color: #6c63ff;
+    width: 282px;
+    height: 50px;
+    border: none;
+    font-family: 'Prata', serif;
+    font-size: 18px;
+    box-shadow: 0px 4px 9px -4px black;
+    margin-top: 35px;
+    margin-bottom: 30px;
 }
 li, a:link{
     color: #ffffff;
