--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     margin: 0;
     display: grid;
     grid-template-rows: autos;
-    grid-template-columns:  1fr 3fr 0.16fr 1fr 0.33fr 0.6fr 0.33fr 1fr 0.16fr 3fr 1fr;
+    grid-template-columns:  1.25fr 3fr 0.16fr 1fr 0.33fr 0.6fr 0.33fr 1fr 0.16fr 3fr 1.25fr;
     grid-template-areas: "header header header header header header header header header header header"
                             ". title title title title title title title title title ."
                             ". text text text text text text text text text ."
@@ -191,7 +191,7 @@ li, a{
     text-align: center;
     
     margin-top:45.8905px;
-    margin-left: 110px;
+    margin-left: 15%;
     float: left;
     font-family: 'Prata', serif;
 }
