--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-color: rgba(194,188,152,255);
     background-size: cover;
     width: fit-content;
+    z-index: auto;
     color: #ffffff;
     margin: 0;
     display: grid;
@@ -335,6 +336,12 @@ li, a{
     height: 70%;
     margin-left: 11%;
     margin-bottom: 40px;
+}
+form{
+    z-index: 1;
+    background-color: #eae2b7;
+    text-align: center;
+    grid-area: form;
 }
 button{
     color: white;
