--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
     background-color: rgba(194,188,152,255);
     background-size: cover;
     width: fit-content;
-    z-index: auto;
+    z-index: 1;
+    position: relative;
     color: #ffffff;
     margin: 0;
     display: grid;
@@ -338,10 +339,13 @@ li, a{
     margin-bottom: 40px;
 }
 form{
-    z-index: 1;
+    z-index: 2;
     background-color: #eae2b7;
     text-align: center;
-    grid-area: form;
+    position: relative;
+    top: 50%;
+    left: 340%;
+    
 }
 button{
     color: white;
