--- a/style.css
+++ b/style.css
@@ -368,9 +368,12 @@ li, a:link{
     padding: 0;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
+    width: 150px;
 }
 .signupindesign{    
+    grid-area: signup;
     text-align: center;
     display: block;
     margin-top: 18px;
+    color: rgb(0, 48, 73);
 }
