--- a/style.css
+++ b/style.css
@@ -377,3 +377,11 @@ li, a:link{
     margin-top: 18px;
     color: rgb(0, 48, 73);
 }
+.signupform{
+    position: fixed;
+    display: block;
+    z-index: 5;
+}
+.form{
+    max-width: 300px;
+}
