--- a/style.css
+++ b/style.css
@@ -378,10 +378,23 @@ li, a:link{
     color: rgb(0, 48, 73);
 }
 .signupform{
-    position: fixed;
-    display: block;
-    z-index: 5;
+    display: none;
+
+  border: 6px solid salmon; 
+  padding: 2em;
+  width: 400px;
+  text-align: center;
+  background: #fff;
+  position: fixed;
+  top:50%;
+  left:50%;
+
 }
 .form{
-    max-width: 300px;
+    margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+
 }
