--- a/style.css
+++ b/style.css
@@ -379,22 +379,23 @@ li, a:link{
 }
 .signupform{
     display: none;
-
-  border: 6px solid salmon; 
-  padding: 2em;
-  width: 400px;
+  width: 500px;
+  padding: 10px;
   text-align: center;
-  background: #fff;
+  background: rgba(234,226,183,255);
   position: fixed;
   top:50%;
   left:50%;
 
 }
 .form{
-    margin: 70px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 5px;
-  width: 30%;
+    display: none;
+  width: 500px;
+  padding: 10px;
+  text-align: center;
+  background: rgba(234,226,183,255);
+  position: fixed;
+  top:50%;
+  left:50%;
 
 }
