--- a/style.css
+++ b/style.css
@@ -384,15 +384,20 @@ li, a:link{
     text-align: center;
     background: rgba(234,226,183,255);
     position: fixed;
-    top:37.5%;
-    left:37.5%;
+    top:10%;
+    left:32%;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 label{
     background-color: #ffffff;
     width: 200px;
     color: rgb(0, 48, 73);
+    margin-bottom: 16px;
 }
 input{
     width: 80%;
     height: 40px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
