--- a/style.css
+++ b/style.css
@@ -393,3 +393,8 @@ input{
     margin-top: 16px;
     margin-bottom: 16px;
 }
+.backdrop{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.411);
+}
