--- a/style.css
+++ b/style.css
@@ -394,7 +394,12 @@ input{
     margin-bottom: 16px;
 }
 .backdrop{
-    width: 100%;
-    height: 100%;
+    display: block;
+    position: fixed;
+    top:0%;
+    bottom: 0%;
+    left:0%;
+    right: 0%;
+    
     background-color: rgba(0, 0, 0, 0.411);
 }
