Added the javascript to have the menu and back drop pop up

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ input{
     margin-bottom: 16px;
 }
 .backdrop{
-    display: block;
+    display: none;
     position: fixed;
     top:0%;
     bottom: 0%;
