--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ li, a:link{
     top:2%;
     bottom: 2%;
     left:32%;
-    
+    z-index: 3;
 }
 label{
     background-color: #ffffff;
@@ -400,6 +400,6 @@ input{
     bottom: 0%;
     left:0%;
     right: 0%;
-    
+    z-index: 2;
     background-color: rgba(0, 0, 0, 0.411);
 }
