--- a/style.css
+++ b/style.css
@@ -382,18 +382,8 @@ li, a:link{
     padding-top: 65px;
     box-shadow: 0px 4px 9px -4px black;
 }
-label{
-    background-color: #ffffff;
-    width: 200px;
-    color: rgb(0, 48, 73);
-    margin-bottom: 30px;
-    margin-top: 100px;
-    font-family: 'Prata', serif;
-    font-size: 18px;
-    color: rgb(0, 48, 73);
-}
 input{
-    width: 80%;
+    width: 90%;
     height: 40px;
     margin-top: 16px;
     margin-bottom: 16px;
@@ -401,8 +391,15 @@ input{
     text-align: center;
     font-family: 'Prata', serif;
     font-size: 18px;
-    color: rgb(0, 48, 73);
+    color: rgba(203,203,203,255);
     box-shadow: 0px 4px 9px -4px black;
+}
+.label{
+    width: 50%;
+    color: rgb(0, 48, 73);
+}
+.join{
+    width: 70%;
 }
 .backdrop{
     display: none;
