--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ li, a:link{
 }
 input{
     width: 90%;
-    height: 40px;
+    height: 45px;
     margin-top: 16px;
     margin-bottom: 16px;
     border: none;
@@ -395,11 +395,14 @@ input{
     box-shadow: 0px 4px 9px -4px black;
 }
 .label{
-    width: 50%;
+    width: 57%;
     color: rgb(0, 48, 73);
+    height: 45px;
 }
 .join{
-    width: 70%;
+    width: 77%;
+    height: 45px;
+    margin-top: 20px;
 }
 .backdrop{
     display: none;
