--- a/style.css
+++ b/style.css
@@ -404,7 +404,13 @@ input{
     height: 45px;
     margin-top: 20px;
 }
-
+#contactform{
+    padding-top: 35px;
+}
+#input{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 textarea{
     width: 90%;
     height: 150px;
