--- a/style.css
+++ b/style.css
@@ -27,13 +27,15 @@ header{
     min-width: 100%;
     width: fit-content;
     grid-area: header;
-    height: 90px;
+    height: 67%;
     margin-bottom: 50px;
     color: #ffffff;
     box-shadow: 0px 0px 7px  black;
     position: -webkit-sticky;
 	position: sticky;
 	top: 0;
+    left: 0;
+    right: 0;
 }
 .header, img{
     height: 85.95px;
@@ -410,6 +412,8 @@ input{
 #input{
     margin-top: 10px;
     margin-bottom: 10px;
+    resize: none;
+    text-align: center;
 }
 textarea{
     width: 90%;
