--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     margin: 0;
     display: grid;
     grid-template-rows: autos;
-    grid-template-columns:  1.25fr 3fr 0.16fr 1fr 0.2fr 0.6fr 0.2fr 1fr 0.16fr 3fr 1.25fr;
+    grid-template-columns:  10% 25.75% 1.5% 7.75% 2% 6% 2% 7.75% 1.5% 25.75% 10%;
     grid-template-areas: "header header header header header header header header header header header"
                             ". title title title title title title title title title ."
                             ". text text text text text text text text text ."
@@ -27,8 +27,7 @@ header{
     min-width: 100%;
     width: fit-content;
     grid-area: header;
-    height: 60%;
-    margin-bottom: 5%;
+    height: 107%;
     color: #ffffff;
     box-shadow: 0px 0px 7px  black;
     position: -webkit-sticky;
@@ -46,6 +45,7 @@ header{
     background-color: white;
     grid-area: title;
     margin-bottom: 5%;
+    margin-top: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
 }
