--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header{
     background-color: white;
     grid-area: pillar1;
     box-shadow: 0px 4px 9px -4px black;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     text-align: center;
     color: rgb(0, 48, 73);
 }
@@ -88,7 +88,7 @@ header{
     background-color: white;
     grid-area: pillar2;
     box-shadow: 0px 4px 9px -4px black;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     text-align: center;
     color: rgb(0, 48, 73);
 }
@@ -118,7 +118,7 @@ header{
     background-color: white;
     grid-area: pillar3;
     box-shadow: 0px 4px 9px -4px black;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     text-align: center;
     color: rgb(0, 48, 73);
 }
@@ -255,7 +255,7 @@ li, a{
 .classcard1{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -264,7 +264,7 @@ li, a{
 .classcard2{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -273,7 +273,7 @@ li, a{
 .classcard3{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -282,7 +282,7 @@ li, a{
 .classcard4{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -291,7 +291,7 @@ li, a{
 .classcard5{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -300,7 +300,7 @@ li, a{
 .classcard6{
     background-color: white;
     grid-area: classcard1;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
     text-align: center;
@@ -357,7 +357,7 @@ li, a:link{
 .signup{
     grid-area: signup;
     background-color: #ffffff;
-    margin-bottom: 50px;
+    margin-bottom: 35%;
     padding: 0;
     color: rgb(0, 48, 73);
     box-shadow: 0px 4px 9px -4px black;
