--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
    text-decoration: none; 
 }
+html{font-size: 100%;}
 body{
     min-width: 100%;
     min-height: 100%;
@@ -59,6 +60,9 @@ footer{
     .header, .nav{
         display: none;
     }
+    header{
+        height: auto;
+    }
     body{
         display: grid;
     grid-template-rows: autos;
@@ -90,19 +94,19 @@ footer{
     .pillt{
         font-size: 12.5px;
     }
-    .pillar1img{
-        margin: 0;
-    }
-    .pillar2img{
-        width: 10%;
-    }
     header, p{
         font-size: 10px;
     }
+    .pillar2img, .pillar1img, .pillar3img{width: auto; 
+        height: auto; }
+        footer{
+            display: block;
+        }
 }
 @media (min-width: 786px){
-    .pillar2img{
-        width: auto;
+    .pillar2img, .pillar1img, .pillar3img{width: auto; 
+            height: auto; }
+    header{
         height: auto;
     }
 }
@@ -218,7 +222,7 @@ footer{
     margin: 0;
     margin-top: 18px;
     font-family: 'Prata', serif;
-    font-size: 36px;
+    font-size: 2.25rem;
     margin-left: 17px;
     text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.425);
     font-weight: normal;
